--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                     <button id="createCharBtn" class="w-full bg-[var(--tg-theme-button-color,#ea580c)] text-[var(--tg-theme-button-text-color,#fff)] py-3 rounded-lg">
                         Create Character
                     </button>
+
+                    <div>
+                         <label class="block text-gray-700 mb-2">Custom Scenario</label>
+                         <textarea id="customScenario" class="w-full p-2 border rounded-md h-20" placeholder="e.g. Alone in a dark forest..."></textarea>
+                    </div>
+
                 </div>
                 
                 <hr class="my-6">
