--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </div>
                     
                     <div>
-                        <label class="block text-gray-700 mb-2">Personality</label>
-                        <select id="charPersonality" class="w-full p-2 border rounded-md">
-                            <option value="Tsundere">Tsundere - Starts cold, warms up over time</option>
+			  <label class="block text-gray-700 mb-2">Primary Personality</label>
+  				<select id="charPersonality1" class="w-full p-2 border rounded-md mb-2">
+   				  <option value="Tsundere">Tsundere - Starts cold, warms up over time</option>
                             <option value="Yandere">Yandere - Lovestruck and possessive</option>
                             <option value="Kuudere">Kuudere - Cold exterior, warm heart</option>
                             <option value="Dandere">Dandere - Silent but deeply caring</option>
@@ -84,8 +84,33 @@
                             <option value="Gyaru">Gyaru - Fashionable and bold</option>
                             <option value="Deredere">Deredere - Sweet and affectionate</option>
                             <option value="Undere">Undere - Submissive and shy</option>
-                        </select>
-                    </div>
+  				</select>
+
+  			 <label class="block text-gray-700 mb-2 mt-2">Secondary Personality (Optional)</label>
+ 				<select id="charPersonality2" class="w-full p-2 border rounded-md">
+   					 <option value="">None</option>
+   				  <option value="Tsundere">Tsundere - Starts cold, warms up over time</option>
+                            <option value="Yandere">Yandere - Lovestruck and possessive</option>
+                            <option value="Kuudere">Kuudere - Cold exterior, warm heart</option>
+                            <option value="Dandere">Dandere - Silent but deeply caring</option>
+                            <option value="Genki">Genki - Energetic and cheerful</option>
+                            <option value="Kamidere">Kamidere - Confident and god-complex</option>
+                            <option value="Himedere">Himedere - Princess-like attitude</option>
+                            <option value="Bokukko">Bokukko - Tomboy with rough speech</option>
+                            <option value="Shundere">Shundere - Bashful but affectionate</option>
+                            <option value="Oujidere">Oujidere - Noble prince type</option>
+                            <option value="Mayadere">Mayadere - Reformed villain</option>
+                            <option value="Megane">Megane - Intellectual glasses-wearer</option>
+                            <option value="Onee-san">Onee-san - Mature older sister</option>
+                            <option value="Shrinking Violet">Shrinking Violet - Extremely shy</option>
+                            <option value="Yangire">Yangire - Unpredictable mood swings</option>
+                            <option value="Nekomimi">Nekomimi - Catgirl tendencies</option>
+                            <option value="Gyaru">Gyaru - Fashionable and bold</option>
+                            <option value="Deredere">Deredere - Sweet and affectionate</option>
+                            <option value="Undere">Undere - Submissive and shy</option>
+  				</select>
+			</div>
+
                     
                     <div>
                         <label class="block text-gray-700 mb-2">Background Story</label>
