--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
             function processCommand(command) {
                 const parts = command.split(' ');
                 const cmd = parts[0].toLowerCase();
-                const args = parts.slice(1).join(' ');
-                }
+                const args = parts.slice(1).join(' '); }
+               
                 switch(cmd) {
                     case '/help':
                         addBotMessage("Available commands:\n" +
