--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 };
 
                 
-                messageInput.value = '';
+                messageInput.value = '';{
             }
               function processCommand(command) {
                 const parts = command.split(' ');
